--- a/calls/form.html
+++ b/calls/form.html
@@ -1,4 +1,4 @@
-<form method="POST" acction="https://<API Username>:<API Password>@api.46elks.com/a1/Calls">
+<form method="POST" action="https://<API Username>:<API Password>@api.46elks.com/a1/Calls">
 <input name="from" value="+46766861234" />
 <input name="to" value="+46723175800" />
 <input name="voice_start" value='{"connect":"+461890510"}' />
